parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ANYTHING
    CLOSE_COMMENT
    OPEN_COMMENT
    REPEAT
    UNTIL

Grammar

Rule 0     S' -> start
Rule 1     start -> PROGBEGIN state_list DOT
Rule 2     start -> PROGBEGIN NAME state_list DOT
Rule 3     state_list -> BLOCK_OPEN state END_LINE state_list BLOCK_CLOSE
Rule 4     state_list -> BLOCK_OPEN state END_LINE BLOCK_CLOSE
Rule 5     state_list -> state END_LINE state_list
Rule 6     state_list -> state END_LINE
Rule 7     state_body -> BLOCK_OPEN state_list BLOCK_CLOSE
Rule 8     state_body -> state
Rule 9     state -> IF expression THEN state_body
Rule 10    state -> IF expression THEN state_body ELSE state_body
Rule 11    state -> FOR NAME ASSIGNMENT expression TO expression DO state_body
Rule 12    state -> WHILE expression DO state_body
Rule 13    state -> FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON var_type END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
Rule 14    state -> FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON NONE_TYPE END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
Rule 15    state -> FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
Rule 16    argument_list -> NAME COLON var_type COMMA argument_list
Rule 17    argument_list -> NAME COLON var_type
Rule 18    argument_list -> NAME COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type COMMA argument_list
Rule 19    argument_list -> NAME COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type
Rule 20    argument_list -> empty
Rule 21    state -> RETURN expression
Rule 22    state -> RETURN
Rule 23    state -> VAR_DEF NAME COLON var_type
Rule 24    state_var_def -> VAR_DEF NAME COLON var_type
Rule 25    state -> VAR_DEF NAME COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type
Rule 26    state_array_def -> VAR_DEF NAME COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type
Rule 27    state -> WRITELN OPEN_ROUND_BKT expression CLOSE_ROUND_BKT
Rule 28    state -> READLN OPEN_ROUND_BKT NAME CLOSE_ROUND_BKT
Rule 29    state -> expression_name ASSIGNMENT expression
Rule 30    state -> expression_array_call ASSIGNMENT expression
Rule 31    state -> state_var_def ASSIGNMENT expression
Rule 32    state -> state_array_def ASSIGNMENT OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
Rule 33    state -> expression_name ASSIGNMENT OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
Rule 34    state -> expression
Rule 35    expr_list -> expression COMMA expr_list
Rule 36    expr_list -> expression
Rule 37    expr_list -> empty
Rule 38    expression -> NAME OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
Rule 39    expression -> NAME OPEN_SQUARE_BKT expression CLOSE_SQUARE_BKT
Rule 40    expression_array_call -> NAME OPEN_SQUARE_BKT expression CLOSE_SQUARE_BKT
Rule 41    expression -> expression MULTIPLY expression
Rule 42    expression -> expression DIVIDE expression
Rule 43    expression -> expression PLUS expression
Rule 44    expression -> expression MINUS expression
Rule 45    expression -> expression EQUALS expression
Rule 46    expression -> expression MORE expression
Rule 47    expression -> expression LESS expression
Rule 48    expression -> expression AND expression
Rule 49    expression -> expression OR expression
Rule 50    expression -> INT
Rule 51    expression -> FLOAT
Rule 52    expression -> BOOL
Rule 53    expression -> expression_name DOT LENGTH
Rule 54    expression -> STRING
Rule 55    expression -> NAME
Rule 56    expression_name -> NAME
Rule 57    var_type -> FLOAT_TYPE
Rule 58    var_type -> INT_TYPE
Rule 59    var_type -> STRING_TYPE
Rule 60    var_type -> BOOL_TYPE
Rule 61    empty -> <empty>

Terminals, with rules where they appear

AND                  : 48
ANYTHING             : 
ARRAY                : 15 18 19 25 26
ASSIGNMENT           : 11 29 30 31 32 33
BLOCK_CLOSE          : 3 4 7 13 14 15
BLOCK_OPEN           : 3 4 7 13 14 15
BOOL                 : 52
BOOL_TYPE            : 60
CLOSE_COMMENT        : 
CLOSE_ROUND_BKT      : 13 14 15 27 28 32 33 38
CLOSE_SQUARE_BKT     : 15 18 19 25 26 39 40
COLON                : 13 14 15 16 17 18 19 23 24 25 26
COMMA                : 16 18 35
DIVIDE               : 42
DO                   : 11 12
DOT                  : 1 2 15 15 18 18 19 19 25 25 26 26 53
ELSE                 : 10
END_LINE             : 3 4 5 6 13 14 15
EQUALS               : 45
FLOAT                : 51
FLOAT_TYPE           : 57
FOR                  : 11
FUNC_DEF             : 13 14 15
IF                   : 9 10
INT                  : 15 15 18 18 19 19 25 25 26 26 50
INT_TYPE             : 58
LENGTH               : 53
LESS                 : 47
MINUS                : 44
MORE                 : 46
MULTIPLY             : 41
NAME                 : 2 11 13 14 15 16 17 18 19 23 24 25 26 28 38 39 40 55 56
NONE_TYPE            : 14
OF                   : 15 18 19 25 26
OPEN_COMMENT         : 
OPEN_ROUND_BKT       : 13 14 15 27 28 32 33 38
OPEN_SQUARE_BKT      : 15 18 19 25 26 39 40
OR                   : 49
PLUS                 : 43
PROGBEGIN            : 1 2
READLN               : 28
REPEAT               : 
RETURN               : 21 22
STRING               : 54
STRING_TYPE          : 59
THEN                 : 9 10
TO                   : 11
UNTIL                : 
VAR_DEF              : 23 24 25 26
WHILE                : 12
WRITELN              : 27
error                : 

Nonterminals, with rules where they appear

argument_list        : 13 14 15 16 18
empty                : 20 37
expr_list            : 32 33 35 38
expression           : 9 10 11 11 12 21 27 29 30 31 34 35 36 39 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49
expression_array_call : 30
expression_name      : 29 33 53
start                : 0
state                : 3 4 5 6 8
state_array_def      : 32
state_body           : 9 10 10 11 12
state_list           : 1 2 3 5 7 13 14 15
state_var_def        : 31
var_type             : 13 15 16 17 18 19 23 24 25 26

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . PROGBEGIN state_list DOT
    (2) start -> . PROGBEGIN NAME state_list DOT

    PROGBEGIN       shift and go to state 2

    start                          shift and go to state 1

state 1

    (0) S' -> start .



state 2

    (1) start -> PROGBEGIN . state_list DOT
    (2) start -> PROGBEGIN . NAME state_list DOT
    (3) state_list -> . BLOCK_OPEN state END_LINE state_list BLOCK_CLOSE
    (4) state_list -> . BLOCK_OPEN state END_LINE BLOCK_CLOSE
    (5) state_list -> . state END_LINE state_list
    (6) state_list -> . state END_LINE
    (9) state -> . IF expression THEN state_body
    (10) state -> . IF expression THEN state_body ELSE state_body
    (11) state -> . FOR NAME ASSIGNMENT expression TO expression DO state_body
    (12) state -> . WHILE expression DO state_body
    (13) state -> . FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON var_type END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
    (14) state -> . FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON NONE_TYPE END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
    (15) state -> . FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
    (21) state -> . RETURN expression
    (22) state -> . RETURN
    (23) state -> . VAR_DEF NAME COLON var_type
    (25) state -> . VAR_DEF NAME COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type
    (27) state -> . WRITELN OPEN_ROUND_BKT expression CLOSE_ROUND_BKT
    (28) state -> . READLN OPEN_ROUND_BKT NAME CLOSE_ROUND_BKT
    (29) state -> . expression_name ASSIGNMENT expression
    (30) state -> . expression_array_call ASSIGNMENT expression
    (31) state -> . state_var_def ASSIGNMENT expression
    (32) state -> . state_array_def ASSIGNMENT OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
    (33) state -> . expression_name ASSIGNMENT OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
    (34) state -> . expression
    (56) expression_name -> . NAME
    (40) expression_array_call -> . NAME OPEN_SQUARE_BKT expression CLOSE_SQUARE_BKT
    (24) state_var_def -> . VAR_DEF NAME COLON var_type
    (26) state_array_def -> . VAR_DEF NAME COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type
    (38) expression -> . NAME OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
    (39) expression -> . NAME OPEN_SQUARE_BKT expression CLOSE_SQUARE_BKT
    (41) expression -> . expression MULTIPLY expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression EQUALS expression
    (46) expression -> . expression MORE expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . BOOL
    (53) expression -> . expression_name DOT LENGTH
    (54) expression -> . STRING
    (55) expression -> . NAME

    NAME            shift and go to state 4
    BLOCK_OPEN      shift and go to state 5
    IF              shift and go to state 7
    FOR             shift and go to state 9
    WHILE           shift and go to state 10
    FUNC_DEF        shift and go to state 11
    RETURN          shift and go to state 13
    VAR_DEF         shift and go to state 14
    WRITELN         shift and go to state 15
    READLN          shift and go to state 16
    INT             shift and go to state 12
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23

    state_list                     shift and go to state 3
    state                          shift and go to state 6
    expression                     shift and go to state 8
    expression_name                shift and go to state 17
    expression_array_call          shift and go to state 18
    state_var_def                  shift and go to state 19
    state_array_def                shift and go to state 20

state 3

    (1) start -> PROGBEGIN state_list . DOT

    DOT             shift and go to state 24


state 4

    (2) start -> PROGBEGIN NAME . state_list DOT
    (56) expression_name -> NAME .
    (40) expression_array_call -> NAME . OPEN_SQUARE_BKT expression CLOSE_SQUARE_BKT
    (38) expression -> NAME . OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
    (39) expression -> NAME . OPEN_SQUARE_BKT expression CLOSE_SQUARE_BKT
    (55) expression -> NAME .
    (3) state_list -> . BLOCK_OPEN state END_LINE state_list BLOCK_CLOSE
    (4) state_list -> . BLOCK_OPEN state END_LINE BLOCK_CLOSE
    (5) state_list -> . state END_LINE state_list
    (6) state_list -> . state END_LINE
    (9) state -> . IF expression THEN state_body
    (10) state -> . IF expression THEN state_body ELSE state_body
    (11) state -> . FOR NAME ASSIGNMENT expression TO expression DO state_body
    (12) state -> . WHILE expression DO state_body
    (13) state -> . FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON var_type END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
    (14) state -> . FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON NONE_TYPE END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
    (15) state -> . FUNC_DEF NAME OPEN_ROUND_BKT argument_list CLOSE_ROUND_BKT COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type END_LINE BLOCK_OPEN state_list BLOCK_CLOSE
    (21) state -> . RETURN expression
    (22) state -> . RETURN
    (23) state -> . VAR_DEF NAME COLON var_type
    (25) state -> . VAR_DEF NAME COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type
    (27) state -> . WRITELN OPEN_ROUND_BKT expression CLOSE_ROUND_BKT
    (28) state -> . READLN OPEN_ROUND_BKT NAME CLOSE_ROUND_BKT
    (29) state -> . expression_name ASSIGNMENT expression
    (30) state -> . expression_array_call ASSIGNMENT expression
    (31) state -> . state_var_def ASSIGNMENT expression
    (32) state -> . state_array_def ASSIGNMENT OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
    (33) state -> . expression_name ASSIGNMENT OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
    (34) state -> . expression
    (56) expression_name -> . NAME
    (40) expression_array_call -> . NAME OPEN_SQUARE_BKT expression CLOSE_SQUARE_BKT
    (24) state_var_def -> . VAR_DEF NAME COLON var_type
    (26) state_array_def -> . VAR_DEF NAME COLON ARRAY OPEN_SQUARE_BKT INT DOT DOT INT CLOSE_SQUARE_BKT OF var_type
    (38) expression -> . NAME OPEN_ROUND_BKT expr_list CLOSE_ROUND_BKT
    (39) expression -> . NAME OPEN_SQUARE_BKT expression CLOSE_SQUARE_BKT
    (41) expression -> . expression MULTIPLY expression
    (42) expression -> . expression DIVIDE expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression EQUALS expression
    (46) expression -> . expression MORE expression
    (47) expression -> . expression LESS expression
    (48) expression -> . expression AND expression
    (49) expression -> . expression OR expression
    (50) expression -> . INT
    (51) expression -> . FLOAT
    (52) expression -> . BOOL
    (53) expression -> . expression_name DOT LENGTH
    (54) expression -> . STRING
    (55) expression -> . NAME

    ASSIGNMENT      reduce using rule 56 (expression_name -> NAME .)
    DOT             reduce using rule 56 (expression_name -> NAME .)
    OPEN_SQUARE_BKT shift and go to state 27
    OPEN_ROUND_BKT  shift and go to state 28
    MULTIPLY        reduce using rule 55 (expression -> NAME .)
    DIVIDE          reduce using rule 55 (expression -> NAME .)
    PLUS            reduce using rule 55 (expression -> NAME .)
    MINUS           reduce using rule 55 (expression -> NAME .)
    EQUALS          reduce using rule 55 (expression -> NAME .)
    MORE            reduce using rule 55 (expression -> NAME .)
    LESS            reduce using rule 55 (expression -> NAME .)
    AND             reduce using rule 55 (expression -> NAME .)
    OR              reduce using rule 55 (expression -> NAME .)
    END_LINE        reduce using rule 55 (expression -> NAME .)
    BLOCK_OPEN      shift and go to state 5
    IF              shift and go to state 7
    FOR             shift and go to state 9
    WHILE           shift and go to state 10
    FUNC_DEF        shift and go to state 11
    RETURN          shift and go to state 13
    VAR_DEF         shift and go to state 14
    WRITELN         shift and go to state 15
    READLN          shift and go to state 16
    NAME            shift and go to state 25
    INT             shift and go to state 12
    FLOAT           shift and go to state 21
    BOOL            shift and go to state 22
    STRING          shift and go to state 23

    state_list                     shift and go to state 26
    expression                     shift and go to state 8
    state                          shift and go to state 6
    expression_name                shift and go to state 17
    expression_array_call          shift and go to state 18
    state_var_def                  shift and go to state 19
    state_array_def                shift and go to state 20

state 5
